Bug 476652 - Frameless Kate missing separator above e.g. Symbol Outline
Summary: Frameless Kate missing separator above e.g. Symbol Outline
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-06 23:32 UTC by Quinten Kock
Modified: 2023-11-10 10:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of described issue (92.69 KB, image/png)
2023-11-06 23:32 UTC, Quinten Kock
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Quinten Kock 2023-11-06 23:32:42 UTC
Created attachment 162917 [details]
Screenshot of described issue

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
The new frameless style in Kate looks great! But it does have at least one annoyance that looks ugly: the Symbol Outline pane doesn't have a border above it

STEPS TO REPRODUCE
1. Build Kate from git
2. open symbol outline panel

OBSERVED RESULT
Consistent border below menubar/toolbar

EXPECTED RESULT
Border is missing above symbol outline window

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.2

ADDITIONAL INFORMATION
See screenshot
The terminal panel also seems to have this issue when moved to a sidebar.
Comment 1 Waqar Ahmed 2023-11-07 14:40:35 UTC
frameless stuff is not even properly merged yet?
Comment 2 Waqar Ahmed 2023-11-10 10:40:50 UTC
Git commit 151d4d36b4347d412df191f08e33e17f98cd3533 by Waqar Ahmed.
Committed on 10/11/2023 at 11:40.
Pushed by waqar into branch 'master'.

Fix missing separator above lsp symbol view

M  +7    -0    addons/lspclient/lspclientsymbolview.cpp

https://invent.kde.org/utilities/kate/-/commit/151d4d36b4347d412df191f08e33e17f98cd3533