Fix missing separator above lsp symbol view

BUG: 476652